Add full Eshop demo — initial import

--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Multi-vendor Eshop</title>
     <link rel="stylesheet" href="css/main.css">
-    <title>Eshop</title>
+    <script src="js/core/app.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Eshop</h1>
-    </header>
-    <main>
-        <p>Explore our range of products!</p>
-    </main>
-    <script src="js/app.js"></script>
+    <div class="hero">Welcome to the Multi-vendor Eshop</div>
+    <div class="featured-products">
+        <!-- Featured products will be dynamically loaded here -->
+    </div>
+    <script src="js/core/state.js"></script>
 </body>
 </html>
